# darkconf

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yaml
darkconf/: config.py  stages.py  types.py
tests/integration/: test_config.py
